@@ -12,21 +12,20 @@
  * information: "Portions copyright [year] [name of copyright owner]".
  *
  * Copyright 2015 ForgeRock AS.
+ * Portions Copyright 2026 Wren Security
  */
 
 package org.forgerock.guice.core;
-
-import java.util.ArrayList;
-import java.util.List;
-
-import org.testng.annotations.AfterMethod;
-import org.testng.annotations.BeforeMethod;
 
 import com.google.inject.Binder;
 import com.google.inject.Guice;
 import com.google.inject.Injector;
 import com.google.inject.Module;
 import com.google.inject.util.Modules;
+import java.util.ArrayList;
+import java.util.List;
+import org.testng.annotations.AfterMethod;
+import org.testng.annotations.BeforeMethod;
 
 /**
  * A test case that allows registration of guice modules for the life of each test method being run.
@@ -50,12 +49,13 @@ public abstract class GuiceTestCase implements Module {
         GuiceModules guiceModules = this.getClass().getAnnotation(GuiceModules.class);
         if (guiceModules != null) {
             for (Class<? extends Module> moduleType : guiceModules.value()) {
-                modules.add(moduleType.newInstance());
+                modules.add(moduleType.getConstructor().newInstance());
             }
         }
 
         final GuiceTestCase testCase = this;
         Module overrideModule = new Module() {
+            @Override
             public void configure(Binder binder) {
                 testCase.configureOverrideBindings(binder);
             }
@@ -79,6 +79,7 @@ public abstract class GuiceTestCase implements Module {
      * A default, empty implementation is provided as the test may not have any of its own objects to bind.
      * @param binder The Guice binder.
      */
+    @Override
     public void configure(Binder binder) {
     }
 
